# linkture

./: CHANGELOG.md  Pipfile  README.md  linkture.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi.yml
res/: bbooks.db  books.json  custom.json  ranges.csv  resources.db
src/linkture/: __init__.py  __main__.py  linkture.py
src/linkture/res/: custom.json  resources.db
src/res/: custom.json  resources.db
tests/: test_haitian_creole.py
