[project]
name = "linkture"
version = "2.5.2"
description = "PARSE and PROCESS BIBLE SCRIPTURE REFERENCES: extract, tag, link, rewrite, translate, BCV-encode and decode"
authors = [
    {name = "Eryk J."},
]
dependencies = [
    "setuptools>=59.6.0",
    "argparse>=1.4.0",
    "regex>=2023.8.8",
    "unidecode>=1.3.8",
    "argparse",
    "pandas==2.2.*",
    "pathlib",
    "regex",
    "unidecode",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/erykjj/linkture"
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
