[project]
name = "linkture"
dynamic = ["version"]
description = "PARSE and PROCESS BIBLE SCRIPTURE REFERENCES: extract, tag, link, rewrite, translate, BCV-encode and decode"
authors = [
    {name = "Eryk J.", email = "infiniti@inventati.org"}
]
dependencies = [
    "setuptools>=59.6.0",
    "argparse>=1.4.0",
    "regex>=2023.8.8",
    "unidecode>=1.3.8",
    "pathlib>=1.0.1",
    "pandas==2.2.2"
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Religion",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Linguistic"
]
keywords = ["bible", "scriptures", "scripture-references", "scripture-translation", "scripture-parser", "scripture-linker"]

[project.urls]
Homepage = "https://github.com/erykjj/linkture"
Issues = "https://github.com/erykjj/linkture/issues"
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "linkture/__main__.py"
